--- a/Playbook.yml
+++ b/Playbook.yml
@@ -29,5 +29,6 @@
 
   - name: Copy artidacts from NEXUS
     get_url:
-      url: http://18.237.201.113:8081/nexus/service/local/repositories/Gol/content/Dev/Dev/1.{{BUILD_ID}}/Dev-1.{{BUILD_ID}}.war
+      #url: http://18.237.201.113:8081/nexus/service/local/repositories/Gol/content/Dev/Dev/1.{{BUILD_ID}}/Dev-1.{{BUILD_ID}}.war
+      url: http://34.221.19.115:8081/nexus/service/local/repositories/Gol/content/Dev/Dev/1.4/Dev-1.4.war
       dest: /usr/share/tomcat/webapps
