--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,7 @@
     yum:
       name: "{{item}}"
       state: present
-    with_item:
+    with_items:
       -java-1.8.0
       -tomcat
       -tomcat-webapps
