--- a/Devops/gameplaybook.yml
+++ b/Devops/gameplaybook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts:webserver
+- hosts: webservers
   become: true
   tasks:
   
@@ -7,7 +7,7 @@
     yum:
       name: "{{item}}"
       state: present
-    with_item:
+    with_items:
       - java-1.8.0
       - tomcat-webapps
       - tomcat-admin-webapps
