--- a/Devops/gameplaybook.yml
+++ b/Devops/gameplaybook.yml
@@ -17,10 +17,16 @@
     copy:
       src: tomcat-users.xml
       dest: /etc/tomcat/tomcat-users.xml
-
+      
+  - name: Delete old version
+    file:
+      path: /usr/share/tomcat/webapps/Env
+      state: absent
+      owner: root
+      
   - name: Deploy Artifacts to tomcat server
     get_url: 
-      url: http://100.20.122.10:8081/repository/GAME/Env/Env/{{version}}/Env-{{version}}.war
+      url: http://100.20.122.10:8081/repository/GAME/Env/Env/1.1/Env-1.1.war
       url_username: admin
       password: 1234
       dest: /usr/share/tomcat/webapps/
