--- a/Devops/gameplaybook.yml
+++ b/Devops/gameplaybook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: "{{host}}"
+- hosts: servers
   become: true
   tasks:
   
@@ -21,7 +21,7 @@
            
   - name: Deploy Artifacts to tomcat server
     get_url: 
-      url: http://100.20.122.10:8081/repository/GAME/Env/Env/{{version}}/Env-{{version}}.war
+      url: http://35.86.195.113:8081/repository/GAME/Env/Env/1.2/Env-1.2.war
       url_username: admin
       password: 1234
       dest: /usr/share/tomcat/webapps/
